# libabaco

./: .gitignore  Makefile.am  autogen.sh  configure.ac
src/: .gitignore  Makefile.am  abaco.c  assemble.c  assembler.c  assembler.deps  assembler.h  assembler.vapi  ast.c  ast.h  ast.vala  astate.c  astate.h  bytecode.h  libabaco.c  parser.vala  rules.vala  symbol.c  symbol.h  vm.vala
src/abaco/: .gitignore  Makefile.am  assemble.c  assemble.h  assembler.vala  ast.vala  astate.c  astpatch.h  bytecode.c  bytecode.h  bytecode.vapi  compiler.vala  lexer.vala  libabaco.c  libabaco.pc.in  literal.vala  parser.vala  rules.vala  symbol.h  token.vala  vm.vala
src/abaco/ast/: Makefile.am  ast.vapi  chain.h  chain.vapi  node.vala  nodes.vala
src/abaco/stdlib/: arithmetics.abc  bundle.gresources.xml
src/abaco/vapi/: bytecode.vapi  config.deps  patch.vapi  symbol.vapi
src/ast/: ast.c
src/gmp/: Makefile.am  libabaco_gmp.h
src/jit/: .gitignore  Makefile.am  closure.vala  defaults.vala  jit.vala  libabaco_jit.deps  libabaco_jit.pc.in  reg.vala  relation.vala
src/jit/compilers/: base.vala  x86_64.vala
src/jit/regs/: base.vala  function.vala  mpq.vala  mpz.vala  number.vala
src/jit/types/: base.vala  function.vala  loadable.vala  mpq.vala  mpz.vala  nil.vala  number.vala
src/jit/vapi/: config.vapi
src/jits/: Makefile.am  arithmetics.c  arithmetics.h  calcs.c  cast.c  closure.c  closure.h  dasm_patch.h  libabaco_jits.deps  libabaco_jits.h  libabaco_jits.pc.in  libabaco_jits.vapi  reg.c  reg.h
src/jits/x86_64/: .gitignore  jit.c  jit.h  state.dasc.c  state.h
src/mp/: .gitignore  Makefile.am  arith.c  execute.c  internal.h  libabaco_mp.h  libabaco_mp.pc.in  libabaco_mp.vapi  power.c  value.c  value.h  vm.c
src/mp/closure/: .gitignore  Makefile.am  cclosure.vala  closure.vala  function.vala
src/mp/closure/vapi/: config.deps  value.vapi  vm.deps  vm.vapi
src/ucl/: .gitignore  Makefile.am  arithmetic.c  libabaco_ucl.h  libabaco_ucl.pc.in  libabaco_ucl.vapi  load.c  power.c  save.c  unified.c
src/vapi/: ast.vapi  config.deps  patch.vapi  symbol.vapi
test/: .gitignore  Makefile.am  abaco.c  abacojit.c  abacomp.c
